--- a/Other/Bootstrap/index.html
+++ b/Other/Bootstrap/index.html
@@ -44,11 +44,69 @@
   </div>
 </nav>
 
+<!-- JUMBOTRON -->
+<div class="jumbotron jumbotron-fluid jumbotron_background">
+  <div class="container" >
+    <h1 class="display-4 headline">Bootstrap Walkthrough - Fluid jumbotron</h1>
+    <br>
+    <p class="lead subtitle">A quick guide to using Bootstrap in a project.</p>
+  </div>
+</div>
 
+<!-- TABLE (Striped Rows) -->
+<table class="table table-striped divSpace">
+  <thead>
+    <tr class="table-primary">
+      <th scope="col">#</th>
+      <th scope="col">Title</th>
+      <th scope="col">Genre</th>
+      <th scope="col">Rating</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Bladerunner</td>
+      <td>SciFi</td>
+      <td>R</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Krull</td>
+      <td>Fantasy</td>
+      <td>PG</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Ghost</td>
+      <td>Sappy</td>
+      <td>PG</td>
+    </tr>
+    <tr>
+      <th scope="row">4</th>
+      <td>The Little Mermaid</td>
+      <td>Cartoon</td>
+      <td>G</td>
+    </tr>
+    <tr>
+      <th scope="row">5</th>
+      <td>The Navagatio</td>
+      <td>Documentary</td>
+      <td>G</td>
+    </tr>
+  </tbody>
+</table>
 
-
-
-
+<!-- Footer (Active Items) -->
+<footer class="divSpace listBorder divSpace">
+  <ul class="list-group divSpace">
+    <li class="list-group-item list-group-item-primary">Navigatio Sancti Brendani Abbatis</li>
+    <li class="list-group-item">The Voyage of Saint Brendan</li>
+    <li class="list-group-item list-group-item-info">Saint Brendan and the Voyage Before Columbus</li>
+    <li class="list-group-item">St. Brendan of Kerry, the Navigator</li>
+    <li class="list-group-item list-group-item-info">Brendan the Navigator</li>
+  </ul>
+</footer>
 
 
 
