23 Sept 2020 midday push

--- a/03-API-Fundamentals/4-Apps/01-New-York-Times/index.html
+++ b/03-API-Fundamentals/4-Apps/01-New-York-Times/index.html
@@ -11,7 +11,7 @@
 <!--  Status: Active   Created: 2020-09-22   Expires: never-->
 
   <body>
-    <h1>NY Times Search</h1>
+    <h1 class="theHeadline">NY Times Search</h1>
 
     <div class="wrapper">
       <div class="controls">
