--- a/Other/API_Challenge01/index.html
+++ b/Other/API_Challenge01/index.html
@@ -15,23 +15,39 @@
 
   <body>
 
-    <h1>Random Cat Facts</h1>
-
-    <div class="buttons-container">
-      <div class="button">
-        <button class="less">-</button>
-      </div>
-      <div class="qtyOfFacts">1</div>
-      <div class="button" id="more">
-        <button class="more">+</button>
-      </div>
-    </div>
-
-
-
-
-
     
+
+    <!-- Interactives Container -->
+    <div class="interactives-container">
+      <div class="top-container">
+        <h1>Random Cat Facts</h1>
+      </div>
+
+
+      <!-- *** +/- Qty Containter-->
+      <div class="buttons-container">
+        <div class="button">
+          <button class="less">-</button>
+        </div>
+        <div class="qtyOfFacts">1</div>
+        <div class="button">
+          <button class="more">+</button>
+        </div>
+      </div>
+      
+      <div class="details"></div>
+
+      <div class="submit">
+        <button class="btnGetFacts">Get Facts</button>
+      </div>
+
+
+
+
+  </div>
+
+
+
 
     <!--Results From Request-->
     <section>
