--- a/Other/API_Challenge01/index.html
+++ b/Other/API_Challenge01/index.html
@@ -24,10 +24,10 @@
       <!-- Interactives Container -->
       <div class="interactives-container">
 
-        <div class="top-container">
+      <!--   <div class="top-container">
           <h1>Random Cat Facts</h1>
         </div>
-
+      -->
 
         <!-- *** +/- Qty Containter-->
         <div class="buttons-container">
@@ -66,7 +66,7 @@
       </div>
 
       <div class="catFactsHeader">
-        <h3>Fascinating cat facts</h3>
+        <h3>Random Cat Facts</h3>
       </div>
 
       <div class="factsDisplayWrapper">
